mono-tools (2.6.2-1) UNRELEASED; urgency=low

  * New upstream release

 -- Jo Shields <directhex@apebox.org>  Mon, 07 Jun 2010 20:14:57 +0100

mono-tools (2.4.3-2) unstable; urgency=low

  * debian/control:
    + Add explicit build-dep on libnunit-cil-dev (Closes: #564407)
    + Update GNOME# build-deps for -dev transition

 -- Jo Shields <directhex@apebox.org>  Tue, 12 Jan 2010 12:58:08 +0000

mono-tools (2.4.3-1) unstable; urgency=low

  * New upstream release
  * debian/control:
    + Bump Standards to 3.8.3
    + Raise mono-devel build-dep to 2.4.3, and strip out individual 
      library build-deps which are no longer needed
    + Use Webkit#'s -dev package (Closes: #559209, #561628)
  * debian/patches/05_fix_webkit_about_blank_signal.patch:
    + Drop, merged upstream
  * debian/patches/00-fix_build_system.patch:
    + Modify to use mono-csc command, not csc

 -- Jo Shields <directhex@apebox.org>  Fri, 18 Dec 2009 21:19:30 +0000

mono-tools (2.4.2-2) unstable; urgency=medium

  * debian/patches/05_fix_webkit_about_blank_signal.patch:
    + Fix Monodoc's WebKit engine to ignore spurious events indicating
      a request of about:blank. (Closes: #548520)

 -- Jo Shields <directhex@apebox.org>  Tue, 13 Oct 2009 00:42:18 +0100

mono-tools (2.4.2-1) unstable; urgency=low

  * New upstream release
  * debian/copyright:
    + Long overdue update
  * debian/gnunit.install,
    debian/gnunit2.install,
    debian/gnunit.desktop,
    debian/gnunit2.desktop,
    debian/control:
    + Remove GNunit - abandoned upstream (Closes: #439835)
  * debian/monodoc.1,
    debian/monodoc-browser.manpages:
    + Provide a manpage for the "monodoc" command
  * debian/rules:
    + Enhance get-orig-source rule to produce consistent md5sums
  * debian/mono-tools-gui.install,
    debian/control:
    + Add mperfmon to the apps in mono-tools-gui
    + Add gsharp to the apps in mono-tools-gui
  * debian/control:
    + Bump to Standards version 3.8.2