@@ -1,6 +1,8 @@
 mono-tools (2.6.2-1) UNRELEASED; urgency=low
 
   * New upstream release
+  * debian/rules:
+    + Don't use ../tarballs in get-orig-source
 
  -- Jo Shields <directhex@apebox.org>  Mon, 07 Jun 2010 20:14:57 +0100
 
